styling: fix annoying align problem wiht line numbers

--- a/momscript/control_panel/client/style.css
+++ b/momscript/control_panel/client/style.css
@@ -100,6 +100,7 @@ button {
 
 .code-line::before {
     content: counter(line);
+    display: inline-block;
     font-weight: bold;
     margin-right: 10px;
     text-align: right;
